framework/app-gateway/.olares/config/cluster/deploy/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: olares-app-gateway
  labels:
    applications.app.bytetrade.io/author: bytetrade.io
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
