framework/app-gateway/.olares/config/cluster/deploy/app-gateway-mesh-np-os-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: linkerd-mesh
    app.kubernetes.io/managed-by: app-service
    app.kubernetes.io/name: app-gateway
  name: app-gateway-mesh-np
  namespace: os-gateway
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: os-mesh
  podSelector: {}
  policyTypes:
  - Ingress
