framework/app-gateway/.olares/config/cluster/deploy/app-gateway-mesh-np-os-mesh.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: linkerd-mesh
    app.kubernetes.io/managed-by: app-service
    app.kubernetes.io/name: app-gateway
  name: app-gateway-mesh-np
  namespace: os-mesh
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: os-gateway
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: os-mesh-viz
    - namespaceSelector:
        matchLabels:
          bytetrade.io/ns-shared: "true"
    - namespaceSelector:
        matchLabels:
          gateway.olares.io/in-cluster-caller: "true"
    ports:
    - port: 8080
      protocol: TCP
    - port: 8086
      protocol: TCP
    - port: 8090
      protocol: TCP
    - port: 9443
      protocol: TCP
    - port: 443
      protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
