framework/app-gateway/.olares/config/cluster/deploy/eg-control-plane.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway
  namespace: os-gateway
  labels:
    control-plane: envoy-gateway
    helm.sh/chart: gateway-helm-v1.8.0
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: app-gateway-eg
    app.kubernetes.io/version: v1.8.0
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    control-plane: envoy-gateway
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: app-gateway-eg
  ports:
  - name: grpc
    port: 18000
    targetPort: 18000
  - name: ratelimit
    port: 18001
    targetPort: 18001
  - name: wasm
    port: 18002
    targetPort: 18002
  - name: metrics
    port: 19001
    targetPort: 19001
  - name: webhook
    port: 9443
    targetPort: 9443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-gateway
  namespace: os-gateway
  labels:
    control-plane: envoy-gateway
    helm.sh/chart: gateway-helm-v1.8.0
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: app-gateway-eg
    app.kubernetes.io/version: v1.8.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: envoy-gateway
      app.kubernetes.io/name: gateway-helm
      app.kubernetes.io/instance: app-gateway-eg
  template:
    metadata:
      annotations:
        linkerd.io/inject: disabled
        prometheus.io/port: '19001'
        prometheus.io/scrape: 'true'
      labels:
        control-plane: envoy-gateway
        app.kubernetes.io/name: gateway-helm
        app.kubernetes.io/instance: app-gateway-eg
    spec:
      containers:
      - args:
        - server
        - --config-path=/config/envoy-gateway.yaml
        image: beclab/envoy-gateway@sha256:43ad92a60cb4e4d5e2876fd5941d0078318cf8dd2bd8da5dcda133b76605a3db
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: envoy-gateway
        ports:
        - containerPort: 18000
          name: grpc
        - containerPort: 18001
          name: ratelimit
        - containerPort: 18002
          name: wasm
        - containerPort: 19001
          name: metrics
        - name: webhook
          containerPort: 9443
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /config
          name: envoy-gateway-config
          readOnly: true
        - mountPath: /certs
          name: certs
          readOnly: true
      imagePullSecrets: []
      serviceAccountName: envoy-gateway
      priorityClassName: "system-cluster-critical"
      terminationGracePeriodSeconds: 10
      volumes:
      - configMap:
          defaultMode: 420
          name: envoy-gateway-config
        name: envoy-gateway-config
      - name: certs
        secret:
          secretName: envoy-gateway
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: envoy-gateway-topology-injector.os-gateway
  annotations:
    helm.sh/hook: pre-install, pre-upgrade
    helm.sh/hook-weight: '-1'
  labels:
    app.kubernetes.io/component: topology-injector
    helm.sh/chart: gateway-helm-v1.8.0
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: app-gateway-eg
    app.kubernetes.io/version: v1.8.0
    app.kubernetes.io/managed-by: Helm
webhooks:
- name: topology.webhook.gateway.envoyproxy.io
  admissionReviewVersions:
  - v1
  sideEffects: None
  clientConfig:
    service:
      name: envoy-gateway
      namespace: os-gateway
      path: /inject-pod-topology
      port: 9443
  failurePolicy: Ignore
  rules:
  - operations:
    - CREATE
    apiGroups:
    - ''
    apiVersions:
    - v1
    resources:
    - pods/binding
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: In
      values:
      - os-gateway
